[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/skills/double_jump.png" type="Texture" id=1]
[ext_resource path="res://scenes/DoubleJumpSkill.gd" type="Script" id=2]
[ext_resource path="res://sound_effects/equip_skill.wav" type="AudioStream" id=3]
[ext_resource path="res://sound_effects/hover_skill.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 382.5, 370 )

[sub_resource type="Animation" id=1]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 3.24901, 0.554785 ),
"update": 0,
"values": [ Vector2( 0, -800 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "equip"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.4, 0.4 ), Vector2( 0.4, 0.4 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "hover"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.24, 0.24 ) ]
}

[node name="DoubleJumpSkill" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -800 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2( 27.5, 15 )
scale = Vector2( 1, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 1 )
anims/equip = SubResource( 4 )
anims/hover = SubResource( 3 )

[node name="EquipAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="HoverAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="input_event" from="Sprite/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
